# scikit-dataset

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/workflows/: docs.yml  unittests.yml
examples/: 01.intro.ipynb  02.simple_example.ipynb
skdataset/: __init__.py  dataset.py  types.py  utils.py
skdataset/tests/: test_dataset.py
